--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 AUTH0_DOMAIN=doctorderek.us.auth0.com
 AUTH0_CLIENT_ID=07cxDf28FRxucG1rBpELNqJnAIIyPCwv
-AUTH0_CALLBACK_URL=http://localhost:8000/auth/callback
+AUTH0_CALLBACK_URL=http://localhost:8000/
