--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fs-extra": "^7.0.1",
     "gatsby": "^2.25.0",
     "gatsby-plugin-react-helmet": "^3.3.3",
+    "gatsby-plugin-remove-trailing-slashes": "^2.3.13",
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-source-filesystem": "2.3.10",
     "gatsby-theme-auth0": "^1.1.1",
